--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
             <div class="col-xl-8">
             </div>
           </div>
-          
+
+          <div class="parallax-banner-home">
+            <img src="imgs-muscle/banner-muscle.png" alt="Banner Muscle Factory">
+          </div>
+        </div>
           <div class="video-container">
             <div class="video-frame">
               <iframe 
