--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             </div>
           </div>
 
-          <div class="parallax-banner-home">
-            <img src="imgs-muscle/banner-muscle.png" alt="Banner Muscle Factory">
+          <!--<div class="parallax-banner-home">
+            <img src="" alt="Banner Muscle Factory">
           </div>
-        </div>
+        </div> -->
           <div class="video-container">
             <div class="video-frame">
               <iframe 
@@ -89,7 +89,7 @@
               </iframe>
             </div>
             <article class="description">        
-              <p class="ambiente">Academia espaçosa com 300 m², equipada com diversas máquinas para seu treino ser completo e eficiente.</p>
+              <p class="ambiente">Academia espaçosa com 300 m², equipada com diversas máquinas <br> para seu treino ser completo e eficiente.</p>
             </article>
           </div>
           <div class="row justify-content-center grid-group-lg offset-top-98">
