--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
             <div class="col-xl-8">
             </div>
           </div>
-
-          <!--<div class="parallax-banner-home">
-            <img src="" alt="Banner Muscle Factory">
+          <div>
+          <div class="parallax-banner-home">
+            <img src="imgs-muscle/banner-muscle.png" alt="Banner Muscle Factory">
           </div>
-        </div> -->
+        </div> 
+      </div>
           <div class="video-container">
             <div class="video-frame">
               <iframe 
@@ -92,6 +93,15 @@
               <p class="ambiente">Academia espaçosa com 300 m², equipada com diversas máquinas <br> para seu treino ser completo e eficiente.</p>
             </article>
           </div>
+          <article class="description">
+          <p class="ambiente">Academia espaçosa com 300 m², equipada com diversas máquinas <br> para seu treino ser completo e eficiente.</p>
+        </div>
+      </section>
+    </article>
+      <!-- About-->
+          <div class="image-container-planos">
+            <img src="imgs-muscle/valores-planos.png" alt="Valores e Planos">
+        </div>
           <div class="row justify-content-center grid-group-lg offset-top-98">
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
