--- a/index.html
+++ b/index.html
@@ -87,17 +87,12 @@
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
-              </iframe>
+              </iframe> 
             </div>
             <article class="description">        
-              <p class="ambiente">Academia espaçosa com 300 m², equipada com diversas máquinas <br> para seu treino ser completo e eficiente.</p>
+              <p class="video-caption">Este é um exemplo de texto abaixo do vídeo.</p>
             </article>
-          </div>
-          <article class="description">
-          <p class="ambiente">Academia espaçosa com 300 m², equipada com diversas máquinas <br> para seu treino ser completo e eficiente.</p>
-        </div>
-      </section>
-    </article>
+          </div>                
       <!-- About-->
           <div class="image-container-planos">
             <img src="imgs-muscle/valores-planos.png" alt="Valores e Planos">
