--- a/index.html
+++ b/index.html
@@ -72,31 +72,35 @@
           <div class="row justify-content-sm-center offset-top-66">
             <div class="col-xl-8">
             </div>
-          </div>
-          <div>
-          <div class="parallax-banner-home">
-            <img src="imgs-muscle/banner-muscle.png" alt="Banner Muscle Factory">
-          </div>
-        </div> 
-      </div>
-          <div class="video-container">
-            <div class="video-frame">
-              <iframe 
+          </div>       
+      </div> 
+      <!-- DIV TESTE DE FRAME MP4-->
+      <div class="video-wrapper">
+        <div class="video-container-2">
+            <iframe 
                 src="mp4-muscle/apresentação-gym.mp4" 
-                title="Example Video" 
+                title="Apresentação Gym"
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
-              </iframe> 
-            </div>
-            <article class="description">        
-              <p class="video-caption">Este é um exemplo de texto abaixo do vídeo.</p>
-            </article>
-          </div>                
+            </iframe>
+        </div>
+    </div>
+
+    <div class="col-md-8 col-lg-4">
+      <!-- Icon Box Type 5-->
+      <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-xs icon-dark-filled mdi mdi-thumb-up"></span>
+        <h4 class="text-danger offset-top-20">{Inserir Texto}</h4>
+        <p class="ambiente">{Inserir Texto}</p>
+      </div>
+    </div>
+          <!---->>  
       <!-- About-->
+       <div class="container">
           <div class="image-container-planos">
             <img src="imgs-muscle/valores-planos.png" alt="Valores e Planos">
         </div>
+      </div>
           <div class="row justify-content-center grid-group-lg offset-top-98">
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
