--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
           <div class="col-md-10-a col-xl-12">
             <div class="row">
               <div class="col-md-6 col-xl-3">
-                <div class="col-md-8 col-lg-4">
-                  <!-- Icon Box Type 5-->
-                  <h4 class="text-danger offset-top-20-a">Qualquer dúvida, nos envie uma mensagem!</h4>                
+                <div class="col-md-8 col-lg-4">                  
+                  <h4 class="text-danger offset-top-20-a"></h4> <!--Texto acima da section planos muscle-->                
                 </div>
+              </div>
                 <!-- Box Member-->
 
                 <!--<h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">Kayo Romanholi</a> <small
@@ -121,7 +121,6 @@
             </div>
           </div>
         </div>
-      </div>
       </div>
     </section>
 
