--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
           <div class="row">
             <div class="col-md-6 col-xl-3">
               <!-- Box Member-->
-              <div class="box-member"><img class="img-fluid" src="imgs-muscle/kayo-info.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">Kayo Romanholi</a> <small
+              <div class="box-member"><img class="img-fluid" src="imgs-muscle/kayo-perf.png" alt="" />
+                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Inserir Texto}</a> <small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -275,8 +275,8 @@
             </div>
             <div class="col-md-6 col-xl-3 offset-top-66 offset-md-top-0 offset-xl-top-0">
               <!-- Box Member-->
-              <div class="box-member"><img class="img-fluid" src="imgs-muscle/alan-info.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Allan Zeider</a> <small
+              <div class="box-member"><img class="img-fluid" src="imgs-muscle/alan-perf.png" alt="" />
+                <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">{Inserir Texto}</a> <small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -299,8 +299,8 @@
             </div>
             <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
               <!-- Box Member-->
-              <div class="box-member"><img class="img-fluid" src="imgs-muscle/eduardo-info.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Eduardo </a> <small
+              <div class="box-member"><img class="img-fluid" src="imgs-muscle/eduardo-perf.png" alt="" />
+                <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">{Inserir Texto}</a> <small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -319,14 +319,12 @@
                   </div>
                 </div>
               </div>
-              <p class="offset-xl-top-0 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-                quis officiis natus, voluptatem itaque cupiditate voluptates pariatur praesentium doloribus deserunt
-                ipsam dolor.<br><br> Autem quas soluta explicabo laborum, magni nostrum ipsam.</p>
+              <p class="offset-xl-top-0 text-muted"></p>  <!-- Espaço para texto -->
             </div>
             <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
               <!-- Box Member-->
               <div class="box-member"><img class="img-fluid" src="images/user-austin-ortiz-270x270.jpg" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Funcionario 4</a> <small
+                <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">{Inserir Texto}</a> <small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -345,9 +343,7 @@
                   </div>
                 </div>
               </div>
-              <p class="offset-xl-top-0 text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis
-                perferendis labore quod ut! Nostrum nesciunt illum, <br><br> iste sed laborum consectetur tenetur
-                consequuntur atque quod! Odio officia quibusdam eos enim commodi.</p>
+              <p class="offset-xl-top-0 text-muted"></p> <!-- Espaço para texto -->
             </div>
           </div><a class="offset-top-66 btn btn-danger" href="#about-coach.html">Nossa Equipe</a>
         </div>
