--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                   </div>
                 </div>
               </div>
-              <p class="offset-xl-top-0 text-muted">Espaço para texto</p>
+              <p class="offset-xl-top-0 text-muted"></p> <!--Espaço para texto -->
             </div>
             <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
               <!-- Box Member-->
