--- a/index.html
+++ b/index.html
@@ -366,29 +366,48 @@
                   data-nav-class="[&quot;owl-prev mdi mdi-chevron-left&quot;, &quot;owl-next mdi mdi-chevron-right&quot;]">
                   <div>
                     <blockquote class="quote quote-slider-3">
-                      <p class="quote-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, veniam facilis?
-                        Beatae quod nemo cumque quisquam ratione aspernatur deleniti exercitationem ipsam modi,
-                        <br><br>quaerat velit debitis at natus, esse pariatur molestias.</p><img
-                        class="quote-img rounded-circle" width="80" height="80" src="imgs-muscle/kayo-muscle.jpg"
+                      <p class="quote-body">{Loja De Calçados Pro-pé}</p><img
+                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/logo-propé.png"
                         alt="Kayo Romanholi" />
                       <p class="font-weight-bold quote-author">
-                        <cite class="text-normal">Kayo Romanholi</cite>
+                        <cite class="text-normal">{Espaço para descrição}</cite>
                       </p>
-                      <p class="quote-desc text-gray">Profissional de ED. Física e Mestre faixa preta em Musculação</p>
+                      <p class="quote-desc text-gray"></p> <!-- espaço para texto -->
                     </blockquote>
                   </div>
                   <div>
                     <blockquote class="quote quote-slider-3">
-                      <p class="quote-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia magni enim,
-                        iste laborum sapiente maiores doloribus reiciendis nobis eos, <br><br> quod quas corrupti non.
-                        Impedit est ex quis inventore exercitationem dolorem.</p><img class="quote-img rounded-circle"
-                        width="80" height="80" src="imgs-muscle/alan-muscle.jpg" alt="Alan Zeider" />
+                      <p class="quote-body">{Loja De Calçados Pro-pé}</p><img
+                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/logo-propé.png"
+                        alt="Kayo Romanholi" />
                       <p class="font-weight-bold quote-author">
-                        <cite class="text-normal">Alan Zeider</cite>
+                        <cite class="text-normal">{Espaço para descrição}</cite>
                       </p>
-                      <p class="quote-desc text-gray">Professor de Ed. Física e Instrutor</p>
+                      <p class="quote-desc text-gray"></p> <!-- espaço para texto -->
                     </blockquote>
                   </div>
+                  <div>
+                    <blockquote class="quote quote-slider-3">
+                      <p class="quote-body">{Loja De Calçados Pro-pé}</p><img
+                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/logo-propé.png"
+                        alt="Kayo Romanholi" />
+                      <p class="font-weight-bold quote-author">
+                        <cite class="text-normal">{Espaço para descrição}</cite>
+                      </p>
+                      <p class="quote-desc text-gray"></p> <!-- espaço para texto -->
+                    </blockquote>
+                  </div>
+                  <div>
+                    <blockquote class="quote quote-slider-3">
+                      <p class="quote-body">{Loja De Calçados Pro-pé}</p><img
+                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/logo-propé.png"
+                        alt="Kayo Romanholi" />
+                      <p class="font-weight-bold quote-author">
+                        <cite class="text-normal">{Espaço para descrição}</cite>
+                      </p>
+                      <p class="quote-desc text-gray"></p> <!-- espaço para texto -->
+                    </blockquote>
+                  </div>                  
                 </div>
               </div>
             </div>
