--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <div class="col-md-6 col-xl-3 offset-top-66 offset-md-top-0 offset-xl-top-0">
               <!-- Box Member-->
               <div class="box-member"><img class="img-fluid" src="imgs-muscle/alan-perf.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">{Inserir Texto}</a> <small
+                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Inserir Texto}</a> <small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -300,7 +300,7 @@
             <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
               <!-- Box Member-->
               <div class="box-member"><img class="img-fluid" src="imgs-muscle/eduardo-perf.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">{Inserir Texto}</a> <small
+                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Inserir Texto}</a> <small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -323,9 +323,9 @@
             </div>
             <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
               <!-- Box Member-->
-              <div class="box-member"><img class="img-fluid" src="images/user-austin-ortiz-270x270.jpg" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">{Inserir Texto}</a> <small
-                    class="text-danger"></small>
+              <div class="box-member"><img class="img-fluid" src="imgs-muscle/adriane-perf.png" alt="" />
+                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Corredora amadora / Maratonista / Trail}</a><br><small
+                    class="text-danger">Educação Física</small>
                 </h5>
                 <div class="box-member-caption">
                   <div class="box-member-caption-inner">
@@ -439,14 +439,14 @@
                 </p>
                 <div class="offset-top-30">
                   <form class="rd-mailform" data-form-output="form-subscribe-footer" data-form-type="subscribe"
-                    method="post" action="php/processar_registro.php">
+                    method="post" action="#">
                     <div class="form-group">
                       <div class="input-group input-group-sm"><span class="input-group-prepend"><span
                             class="input-group-text input-group-icon"><span
                               class="mdi mdi-email novi-icon"></span></span></span>
                         <input class="form-control" placeholder="Insira seu email" type="email" name="email"
                           data-constraints="@Required @Email"><span class="input-group-append">
-                          <button class="btn btn-sm btn-danger" type="submit">Inscreva-se</button></span>
+                          <button class="btn btn-sm btn-danger" type="submit">Inscreva-se</button></span> <!-- Em breve -->
                       </div>
                     </div>
                     <div class="form-output" id="form-subscribe-footer"></div>
