--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                           class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a>
                       </li>
                       <li class="list-inline-item"><a
-                          class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="#"></a>
+                          class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="https://api.whatsapp.com/message/KVYF26AQJCFOB1?autoload=1&app_absent=0" target="_blank" ></a>
                       </li>
                     </ul>
                   </div>
