--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
             <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
               <!-- Box Member-->
               <div class="box-member"><img class="img-fluid" src="imgs-muscle/adriane-perf.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Corredora amadora / Maratonista / Trail}</a><br><small
-                    class="text-danger">Educação Física</small>
+                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Profissional De Educação Física}</a><br><small
+                    class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
                   <div class="box-member-caption-inner">
@@ -334,7 +334,7 @@
                           class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a>
                       </li>
                       <li class="list-inline-item"><a
-                          class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a>
+                          class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="https://www.instagram.com/adriane_cvaz/" target="_blank" ></a>
                       </li>
                       <li class="list-inline-item"><a
                           class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="https://api.whatsapp.com/message/KVYF26AQJCFOB1?autoload=1&app_absent=0" target="_blank" ></a>
