--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
               <div class="rd-navbar-mobile-scroll">
                 <!--Navbar Brand Mobile-->
                 <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='173' height='30'
-                      src='images/logo.png' alt='' /></a></div>
+                      src='imgs-muscle/banner-muscle.png' alt='' /></a></div>
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="index.html"><span>Home</span></a></li>
                   <li><a href="#about-coach.html"><span>Sobre</span></a></li>
                   <li><a href="#typography.html"><span>Parcerias</span></a></li>
-                  <li><a href="#contacts.html="><span>Contato</span></a></li>
+                  <li><a href="formulario.html"><span>registro</span></a></li>
                 </ul>
               </div>
             </div>
@@ -263,7 +263,7 @@
                           class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a>
                       </li>
                       <li class="list-inline-item"><a
-                          class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a>
+                          class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="https://www.instagram.com/kayoromanholi1/" target="_blank"></a>
                       </li>
                       <li class="list-inline-item"><a
                           class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="#"></a>
@@ -286,7 +286,7 @@
                           class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a>
                       </li>
                       <li class="list-inline-item"><a
-                          class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a>
+                          class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="https://www.instagram.com/alanzaider/" target="_blank"></a>
                       </li>
                       <li class="list-inline-item"><a
                           class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="#"></a>
@@ -306,11 +306,12 @@
                 <div class="box-member-caption">
                   <div class="box-member-caption-inner">
                     <ul class="list-inline list-inline-xs">
+                      
                       <li class="list-inline-item"><a
-                          class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a>
+                        class="novi-icon icon fa bi bi-threads icon-xxs icon-circle icon-darkest-filled" href="#"></a>
                       </li>
                       <li class="list-inline-item"><a
-                          class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a>
+                          class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="https://www.instagram.com/duardoxis/" target="_blank"></a>
                       </li>
                       <li class="list-inline-item"><a
                           class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="#"></a>
@@ -414,7 +415,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>    
   </section>
   <!-- Page Footer-->
   <footer
