--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="index.html"><span>Home</span></a></li>
-                  <li><a href="#about-coach.html"><span>Sobre</span></a></li>
-                  <li><a href="#typography.html"><span>Parcerias</span></a></li>
-                  <li><a href="formulario.html"><span>registro</span></a></li>
+                  <li><a href="#about"><span>Sobre</span></a></li>
+                  <li><a href="#parcerias"><span>Parcerias</span></a></li>
+                  <li><a href="#Profissionais"><span>Profissionais</span></a></li>
                 </ul>
               </div>
             </div>
@@ -308,7 +308,7 @@
                     <ul class="list-inline list-inline-xs">
                       
                       <li class="list-inline-item"><a
-                        class="novi-icon icon fa bi bi-threads icon-xxs icon-circle icon-darkest-filled" href="#"></a>
+                        class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a>
                       </li>
                       <li class="list-inline-item"><a
                           class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="https://www.instagram.com/duardoxis/" target="_blank"></a>
