--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                   </div>
                   <div>
                     <blockquote class="quote quote-slider-3">
-                      <p class="quote-body">{Loja De Calçados Pro-pé}</p><img
-                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/logo-propé.png"
+                      <p class="quote-body">{Parceria2}</p><img
+                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/"
                         alt="Kayo Romanholi" />
                       <p class="font-weight-bold quote-author">
                         <cite class="text-normal">{Espaço para descrição}</cite>
@@ -389,8 +389,8 @@
                   </div>
                   <div>
                     <blockquote class="quote quote-slider-3">
-                      <p class="quote-body">{Loja De Calçados Pro-pé}</p><img
-                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/logo-propé.png"
+                      <p class="quote-body">{Parceria3}</p><img
+                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/"
                         alt="Kayo Romanholi" />
                       <p class="font-weight-bold quote-author">
                         <cite class="text-normal">{Espaço para descrição}</cite>
@@ -400,8 +400,8 @@
                   </div>
                   <div>
                     <blockquote class="quote quote-slider-3">
-                      <p class="quote-body">{Loja De Calçados Pro-pé}</p><img
-                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/logo-propé.png"
+                      <p class="quote-body">{Parceria3}</p><img
+                        class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/"
                         alt="Kayo Romanholi" />
                       <p class="font-weight-bold quote-author">
                         <cite class="text-normal">{Espaço para descrição}</cite>
