--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <blockquote class="quote quote-slider-3">
                       <p class="quote-body">{Loja De Calçados Pro-pé}</p><img
                         class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/logo-propé.png"
-                        alt="Kayo Romanholi" />
+                        alt="logo-prope" />
                       <p class="font-weight-bold quote-author">
                         <cite class="text-normal">{Espaço para descrição}</cite>
                       </p>
@@ -380,7 +380,7 @@
                     <blockquote class="quote quote-slider-3">
                       <p class="quote-body">{Parceria2}</p><img
                         class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/"
-                        alt="Kayo Romanholi" />
+                        alt="segunda-parceria" />
                       <p class="font-weight-bold quote-author">
                         <cite class="text-normal">{Espaço para descrição}</cite>
                       </p>
@@ -391,7 +391,7 @@
                     <blockquote class="quote quote-slider-3">
                       <p class="quote-body">{Parceria3}</p><img
                         class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/"
-                        alt="Kayo Romanholi" />
+                        alt="terceira-parceria" />
                       <p class="font-weight-bold quote-author">
                         <cite class="text-normal">{Espaço para descrição}</cite>
                       </p>
@@ -402,7 +402,7 @@
                     <blockquote class="quote quote-slider-3">
                       <p class="quote-body">{Parceria3}</p><img
                         class="quote-img rounded-circle" width="120" height="80" src="imgs-muscle/"
-                        alt="Kayo Romanholi" />
+                        alt="quarta-parceria" />
                       <p class="font-weight-bold quote-author">
                         <cite class="text-normal">{Espaço para descrição}</cite>
                       </p>
