--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   <section class="section-98 section-md-110 novi-background"
     data-preset='{"title":"Team","category":"content, team","reload":false,"id":"team"}'>
     <div class="container">
-      <h1>Profissionais</h1>
+      <h1>Equipe Muscle</h1>
       <hr class="divider bg-danger">
       <div class="row justify-content-sm-center offset-top-66">
         <div class="col-md-10 col-xl-12">
