--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </div>
       </div>
     </div>
+
     <!-- DIV FRAME MP4-->
     <div class="video-wrapper">
       <div class="video-container-2">
@@ -97,7 +98,9 @@
           allowfullscreen>
         </iframe>
       </div>
-    </div>
+    </div>  
+
+
     <section class="section-98 section-md-110 novi-background"
       data-preset='{"title":"Team","category":"content, team","reload":false,"id":"team"}'>
       <div class="container">
@@ -113,7 +116,7 @@
               </div>
                 <!-- Box Member-->
 
-                <!--<h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">Kayo Romanholi</a> <small
+                <!--<h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html"></a> <small
                     class="text-danger"></small>
                 </h5> -->
 
