--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="left-side">
               <address class="contact-info text-left"><a href="tel:#"><span
                     class="icon mdi mdi-cellphone-android novi-icon"></span><span class="text-middle">041
-                    xxxxx-xxxx</span></a></address>
+                    99845-1762</span></a></address>
             </div>
             <div class="center">
               <address class="contact-info text-left"><a href="#"><span
@@ -67,9 +67,9 @@
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="index.html"><span>Home</span></a></li>
-                  <li><a href="#about"><span>Sobre</span></a></li>
-                  <li><a href="#parcerias"><span>Parcerias</span></a></li>
-                  <li><a href="#Profissionais"><span>Profissionais</span></a></li>
+                  <li><a href="about.html"><span>Sobre</span></a></li>
+                  <li><a href="#parcerias.html"><span>Parcerias</span></a></li>
+                  <li><a href="equipe-muscle.html"><span>Equipe Muscle</span></a></li>
                 </ul>
               </div>
             </div>
@@ -93,7 +93,7 @@
     <!-- DIV FRAME MP4-->
     <div class="video-wrapper">
       <div class="video-container-2">
-        <iframe src="mp4-muscle/apresentação-gym.mp4" title="Apresentação Gym" frameborder="0"
+        <iframe src="#" title="Apresentação Gym" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
         </iframe>
@@ -150,7 +150,7 @@
         <div class="box-icon box-icon-bordered"><span
             class="novi-icon icon icon-outlined icon-xs icon-dark-filled mdi mdi-thumb-up"></span>
           <h4 class="text-danger offset-top-20">Ambiente</h4>
-          <p class="ambiente">Amplo Espaço e variedades de máquinas para o seu treino ser completo.</p>
+          <p class="ambiente">Amplo Espaço e variedades de máquinas para o seu treino.</p>
         </div>
       </div>
       <div class="col-md-8 col-lg-4">
