--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                       src='imgs-muscle/banner-muscle.png' alt='' /></a></div>
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
-                  <li class="active"><a href="index.html"><span>Home</span></a></li>
-                  <li><a href="about.html"><span>Sobre</span></a></li>
-                  <li><a href="#parcerias.html"><span>Parcerias</span></a></li>
-                  <li><a href="equipe-muscle.html"><span>Equipe Muscle</span></a></li>
+                  <li class="active"><a href="index.html"><button class="botao">Home</button></a></li>
+                  <li><a href="equipe-muscle.html"><button class="botao">Equipe</button></a></li>
+                  <li><a href="parcerias.html"><button class="botao">Parcerias</button></a></li>                
+                  <li><a href="about.html"><button class="botao">Sobre</button></a></li>
                 </ul>
               </div>
             </div>
@@ -93,7 +93,7 @@
     <!-- DIV FRAME MP4-->
     <div class="video-wrapper">
       <div class="video-container-2">
-        <iframe src="#" title="Apresentação Gym" frameborder="0"
+        <iframe src="mp4-muscle/apresentação-gym.mp4" title="Apresentação Gym" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
         </iframe>
