--- a/equipe-muscle.html
+++ b/equipe-muscle.html
@@ -8,7 +8,7 @@
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="keywords" content="intense web design multipurpose template">
+  <meta name="keywords" content="academia, musculação, treino, saúde, bem-estar">
   <meta name="date" content="Dec 26">
   <link rel="icon" href="imgs-muscle/favicon-muscle.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
@@ -67,7 +67,7 @@
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="index.html"><span>Home</span></a></li>
                   <li><a href="about.html"><span>Sobre</span></a></li>
-                  <li><a href="#parcerias.html"><span>Parcerias</span></a></li>
+                  <li><a href="parcerias.html"><span>Parcerias</span></a></li>
                   <li><a href="equipe-muscle.html"><span>Equipe Muscle</span></a></li>
                 </ul>
               </div>
