--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="keywords" content="intense web design multipurpose template">
+  <meta name="keywords" content="academia, musculação, treino, fitness, saúde, bem-estar">
   <meta name="date" content="Noshi">
   <link rel="icon" href="imgs-muscle/favicon-muscle.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
@@ -63,7 +63,7 @@
               <div class="rd-navbar-mobile-scroll">
                 <!--Navbar Brand Mobile-->
                 <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='173' height='30'
-                      src='imgs-muscle/banner-muscle.png' alt='' /></a></div>
+                      src='imgs-muscle/banner-muscle.png' alt='image-menu-nav' /></a></div>  <!--Alterar a imagem para se adaptar melhor a responsividade do site -->
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="index.html"><button class="botao">Home</button></a></li>
