--- a/parcerias.html
+++ b/parcerias.html
@@ -61,13 +61,14 @@
                 <div class="rd-navbar-nav-wrap">
                   <div class="rd-navbar-mobile-scroll">
                     <!--Navbar Brand Mobile-->
-                    <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='173' height='30' src='images/logo.png' alt=''/></a></div>
+                    <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='173' height='30'
+                          src='imgs-muscle/banner-muscle.png' alt='image-menu-nav' /></a></div>
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li><a href="index.html"><span>Home</span></a></li>
-                      <li><a href="about-coach.html"><span>About Coach</span></a></li>
-                      <li><a href="typography.html"><span>Typography</span></a></li>
-                      <li class="active"><a href="contacts.html"><span>Contact Us</span></a></li>
+                      <li class="active"><a href="index.html"><button class="botao">Home</button></a></li>
+                      <li><a href="equipe-muscle.html"><button class="botao">Equipe</button></a></li>
+                      <li><a href="parcerias.html"><button class="botao">Parcerias</button></a></li>                
+                      <li><a href="about.html"><button class="botao">Sobre</button></a></li>
                     </ul>
                   </div>
                 </div>
@@ -78,8 +79,6 @@
         <div class="context-dark">
           <!-- Modern Breadcrumbs-->
           <section>
-            <div class="parallax-container breadcrumb-modern bg-gray-darkest" data-parallax-img="images/background-04-1920x750.jpg">
-              <div class="parallax-content"> 
                 <div class="container section-top-98 section-bottom-34 section-lg-bottom-66 section-lg-98 section-xl-top-110 section-xl-bottom-41">
                   <h2 class="d-none d-lg-block offset-top-30"><span class="big">Contact Us</span></h2>
                   <ul class="list-inline list-inline-dashed">
@@ -225,7 +224,6 @@
                 </div>
                 <div class="col-sm-10 col-md-3 offset-top-66 order-md-1 offset-md-top-0 col-md-6 col-xl-3 order-xl-1">
                   <!-- Footer brand-->
-                  <div class="footer-brand"><a href="index.html"><img width='173' height='30' src='images/logo.png' alt=''/></a></div>
                   <div class="offset-top-50 text-sm-center text-xl-left">
                           <ul class="list-inline">
                             <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
@@ -234,8 +232,8 @@
                             <li class="list-inline-item"><a class="novi-icon icon fa fa-linkedin icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
                           </ul>
                   </div>
-                  <p class="text-darker offset-top-20">Intense Gym &copy; <span id="copyright-year"></span> .
-                    Design&nbsp;by&nbsp;<a href="https://www.templatemonster.com">TemplateMonster</a>
+                  <p class="text-darker offset-top-20">Muscle Factory &copy; <span id="copyright-year"></span> .
+                    </a>
                   </p>
                 </div>
               </div>
