--- a/about.html
+++ b/about.html
@@ -84,8 +84,9 @@
               class="container section-top-98 section-bottom-34 section-lg-bottom-66 section-lg-98 section-xl-top-110 section-xl-bottom-41">
               <!--Alterar nome dos dir-->
               <ul class="list-inline list-inline-dashed">
-                <li class="list-inline-item"><a href="index.html">Voltar</a></li>
-                <li class="list-inline-item"></li>
+                <li>
+                <a href="index.html"><button class="button-prev">Voltar</button></a>
+              </li>
                 </li>
               </ul>
             </div>
