--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="keywords" content="academia, musculação, treino, fitness, saúde, bem-estar">
-  <meta name="date" content="Noshi">
+  <meta name="date" content="2025">
   <link rel="icon" href="imgs-muscle/favicon-muscle.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Ubuntu:400,400italic,500,700,700italic">
@@ -430,7 +430,6 @@
           <div class="row justify-content-sm-center">
             <div
               class="col-sm-10 col-md-3 text-left order-md-4 col-md-10 col-xl-3 offset-md-top-50 offset-xl-top-0 order-xl-2">
-              <!-- Twitter Feed-->
               <div class="offset-top-20">
 
               </div>
