--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="keywords" content="academia, musculação">
-  <meta name="date" content="Dec 26">
+  <meta name="keywords" content="academia, musculação, treino, fitness, saúde, bem-estar">
+  <meta name="date" content="2025">
   <link rel="icon" href="imgs-muscle/favicon-muscle.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Ubuntu:400,400italic,500,700,700italic">
@@ -77,12 +77,11 @@
       </nav>
     </div>
     <div class="context-dark">
-      <!-- Modern Breadcrumbs-->
+      <!-- button-prev-->
       <section>
           <div class="parallax-content">
             <div
               class="container section-top-98 section-bottom-34 section-lg-bottom-66 section-lg-98 section-xl-top-110 section-xl-bottom-41">
-              <!--Alterar nome dos dir-->
               <ul class="list-inline list-inline-dashed">
                 <li>
                 <a href="index.html"><button class="button-prev">Voltar</button></a>
@@ -337,67 +336,26 @@
           <div class="row justify-content-sm-center">
             <div
               class="col-sm-10 col-md-3 text-left order-md-4 col-md-10 col-xl-3 offset-md-top-50 offset-xl-top-0 order-xl-2">
-              <!-- Twitter Feed-->
-              <p class="text-uppercase text-spacing-60 font-weight-bold text-center text-xl-left">Twitter Feed</p>
               <div class="offset-top-20">
-                <div class="twitter" data-twitter-username="templatemonster" data-twitter-date-hours=" hours ago"
-                  data-twitter-date-minutes=" minutes ago">
-                  <div class="twitter-sm" data-twitter-type="tweet">
-                    <div class="twitter-date text-dark small"><span
-                        class="icon icon-xxs mdi mdi-twitter text-middle"></span> <span class="text-middle"
-                        data-date="text"></span>
-                    </div>
-                    <div class="twitter-text" data-tweet="text"></div>
-                    <div class="twitter-name font-weight-bold big" data-screen_name="text"></div>
-                  </div>
-                  <div class="twitter-sm" data-twitter-type="tweet">
-                    <div class="twitter-date text-dark small"><span
-                        class="icon icon-xxs mdi mdi-twitter text-middle"></span> <span class="text-middle"
-                        data-date="text"></span>
-                    </div>
-                    <div class="twitter-text" data-tweet="text"></div>
-                    <div class="twitter-name font-weight-bold big" data-screen_name="text"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-10 col-md-3 offset-top-66 order-md-3 col-md-10 col-xl-2 offset-xl-top-0 order-xl-3">
-              <!-- Flickr Feed-->
-              <p class="text-uppercase text-spacing-60 font-weight-bold">Gallery</p>
-              <div class="offset-top-24">
-                <div class="group-xs flickr widget-flickrfeed" data-lightgallery="group"
-                  data-flickr-tags="tm58888_landscapes"><a class="flickr-item thumbnail-classic"
-                    data-lightgallery="item" href="" data-image_c="href" data-size="800x800"
-                    data-type="flickr-item"><img width="82" height="82" data-title="alt" src="images/_blank.png" alt=""
-                      data-image_q="src"></a><a class="flickr-item thumbnail-classic" data-lightgallery="item" href=""
-                    data-image_c="href" data-size="800x800" data-type="flickr-item"><img width="82" height="82"
-                      data-title="alt" src="images/_blank.png" alt="" data-image_q="src"></a><a
-                    class="flickr-item thumbnail-classic" data-lightgallery="item" href="" data-image_c="href"
-                    data-size="800x800" data-type="flickr-item"><img width="82" height="82" data-title="alt"
-                      src="images/_blank.png" alt="" data-image_q="src"></a><a class="flickr-item thumbnail-classic"
-                    data-lightgallery="item" href="" data-image_c="href" data-size="800x800"
-                    data-type="flickr-item"><img width="82" height="82" data-title="alt" src="images/_blank.png" alt=""
-                      data-image_q="src"></a>
-                </div>
+
               </div>
             </div>
             <div class="col-sm-10 col-md-3 offset-top-66 order-md-2 offset-md-top-0 col-md-6 col-xl-4 order-xl-4">
               <div class="inset-xl-left-20">
-                <p class="text-uppercase text-spacing-60 font-weight-bold">Fique por dentro das novidades na Muscle
-                  Factory</p>
+                <p class="text-uppercase text-spacing-60 font-weight-bold">Novidades</p>
                 <p class="offset-top-20 text-left">
-                  Receba nossas novidades e promoções
+                  Mantenha se atualizado com as novidades da Muscle Factory
                 </p>
                 <div class="offset-top-30">
                   <form class="rd-mailform" data-form-output="form-subscribe-footer" data-form-type="subscribe"
-                    method="post" action="#bat/rd-mailform.php">
+                    method="post" action="#">
                     <div class="form-group">
                       <div class="input-group input-group-sm"><span class="input-group-prepend"><span
                             class="input-group-text input-group-icon"><span
                               class="mdi mdi-email novi-icon"></span></span></span>
-                        <input class="form-control" placeholder="Insira seu e-mail" type="email" name="email"
+                        <input class="form-control" placeholder="Insira seu email" type="email" name="email"
                           data-constraints="@Required @Email"><span class="input-group-append">
-                          <button class="btn btn-sm btn-danger" type="submit">Inscreva-se</button></span>
+                          <button class="btn btn-sm btn-danger" type="submit">Inscreva-se</button></span> <!-- Em breve -->
                       </div>
                     </div>
                     <div class="form-output" id="form-subscribe-footer"></div>
@@ -407,12 +365,15 @@
             </div>
             <div class="col-sm-10 col-md-3 offset-top-66 order-md-1 offset-md-top-0 col-md-6 col-xl-3 order-xl-1">
               <!-- Footer brand-->
+              <p class="text-uppercase text-spacing-60 font-weight-bold text-center text-xl-left">Nos acompanhe em
+                nossas redes sociais</p>
+
               <div class="offset-top-50 text-sm-center text-xl-left">
                 <ul class="list-inline">
                   <li class="list-inline-item"><a
                       class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
                   <li class="list-inline-item"><a
-                      class="novi-icon icon fa fa-twitter icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                      class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
                   <li class="list-inline-item"><a
                       class="novi-icon icon fa fa-google-plus icon-xxs icon-circle icon-darkest-filled" href="#"></a>
                   </li>
@@ -421,7 +382,6 @@
                 </ul>
               </div>
               <p class="text-darker offset-top-20">Muscle Factory &copy; <span id="copyright-year"></span>
-                </a>
               </p>
             </div>
           </div>
