--- a/equipe-muscle.html
+++ b/equipe-muscle.html
@@ -8,8 +8,8 @@
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="keywords" content="academia, musculação, treino, saúde, bem-estar">
-  <meta name="date" content="Dec 26">
+  <meta name="keywords" content="academia, musculação, treino, fitness, saúde, bem-estar">
+  <meta name="date" content="2025">
   <link rel="icon" href="imgs-muscle/favicon-muscle.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Ubuntu:400,400italic,500,700,700italic">
@@ -32,11 +32,13 @@
             <div class="left-side">
               <address class="contact-info text-left"><a href="tel:#"><span
                     class="icon mdi mdi-cellphone-android novi-icon"></span><span
-                    class="text-middle">{041 xxxxx-xxxx}</span></a></address>
+                    class="text-middle">041
+                    99845-1762</span></a></address>
             </div>
             <div class="center">
               <addres><span
-                    class="icon mdi mdi-map-marker-radius novi-icon"></span><span class="text-middle">{Endereço}</span></a></address>
+                    class="icon mdi mdi-map-marker-radius novi-icon"></span><span class="text-middle">Curitiba-PR / Rio
+                      Bonito</span></a></address>
             </div>
             <div class="right-side">
               <ul class="list-inline list-inline-sm">
@@ -79,6 +81,21 @@
     </div>
 
   </header>
+  <!-- button-prev-->
+  <section>
+    <div class="parallax-content">
+      <div
+        class="container section-top-98 section-bottom-34 section-lg-bottom-66 section-lg-98 section-xl-top-110 section-xl-bottom-41">
+        <ul class="list-inline list-inline-dashed">
+          <li>
+            <a href="index.html"><button class="button-prev">Voltar</button></a>
+          </li>
+          </li>
+        </ul>
+      </div>
+    </div>
+</div>
+</section>
   <!-- About-->
   <section class="section-98 section-md-110 novi-background"
     data-preset='{"title":"Content block 2","category":"content","reload":true,"id":"content-block-2"}'>
@@ -88,7 +105,7 @@
           <!-- Member block type 5-->
           <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
               src="images/user-emily-perkins-437x437.jpg" width="437" height="437" alt="" />
-            <div class="member-block-body"><a class="btn btn-block btn-danger" href="contacts.html">Saiba Mais</a>
+            <div class="member-block-body"><a class="btn btn-block btn-danger" href="#contacts.html">Saiba Mais</a>
               <div class="offset-top-34">
                 <ul class="list-inline list-inline-xs">
                   <li class="list-inline-item"><a
@@ -279,57 +296,57 @@
           <div class="row justify-content-sm-center">
             <div
               class="col-sm-10 col-md-3 text-left order-md-4 col-md-10 col-xl-3 offset-md-top-50 offset-xl-top-0 order-xl-2">
+              <div class="offset-top-20">
 
-            </div>
-
-          </div>
-          <div class="col-sm-10 col-md-3 offset-top-66 order-md-2 offset-md-top-0 col-md-6 col-xl-4 order-xl-4">
-            <div class="inset-xl-left-20">
-              <p class="text-uppercase text-spacing-60 font-weight-bold">Newsletter</p>
-              <p class="offset-top-20 text-left">
-                Keep up with our always upcoming news and updates. Enter your e-mail and
-                subscribe to our newsletter.
-              </p>
-              <div class="offset-top-30">
-                <form class="rd-mailform" data-form-output="form-subscribe-footer" data-form-type="subscribe"
-                  method="post" action="bat/rd-mailform.php">
-                  <div class="form-group">
-                    <div class="input-group input-group-sm"><span class="input-group-prepend"><span
-                          class="input-group-text input-group-icon"><span
-                            class="mdi mdi-email novi-icon"></span></span></span>
-                      <input class="form-control" placeholder="Type your E-Mail" type="email" name="email"
-                        data-constraints="@Required @Email"><span class="input-group-append">
-                        <button class="btn btn-sm btn-danger" type="submit">Subscribe</button></span>
-                    </div>
-                  </div>
-                  <div class="form-output" id="form-subscribe-footer"></div>
-                </form>
               </div>
             </div>
-          </div>
-          <div class="col-sm-10 col-md-3 offset-top-66 order-md-1 offset-md-top-0 col-md-6 col-xl-3 order-xl-1">
-            <!-- Footer brand-->
-            <div class="footer-brand"><a href="index.html"><img width='173' height='30' src='images/logo.png'
-                  alt='' /></a></div>
-            <div class="offset-top-50 text-sm-center text-xl-left">
-              <ul class="list-inline">
-                <li class="list-inline-item"><a
-                    class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
-                <li class="list-inline-item"><a
-                    class="novi-icon icon fa fa-twitter icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
-                <li class="list-inline-item"><a
-                    class="novi-icon icon fa fa-google-plus icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
-                <li class="list-inline-item"><a
-                    class="novi-icon icon fa fa-linkedin icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
-              </ul>
+            <div class="col-sm-10 col-md-3 offset-top-66 order-md-2 offset-md-top-0 col-md-6 col-xl-4 order-xl-4">
+              <div class="inset-xl-left-20">
+                <p class="text-uppercase text-spacing-60 font-weight-bold">Novidades</p>
+                <p class="offset-top-20 text-left">
+                  Mantenha se atualizado com as novidades da Muscle Factory
+                </p>
+                <div class="offset-top-30">
+                  <form class="rd-mailform" data-form-output="form-subscribe-footer" data-form-type="subscribe"
+                    method="post" action="#">
+                    <div class="form-group">
+                      <div class="input-group input-group-sm"><span class="input-group-prepend"><span
+                            class="input-group-text input-group-icon"><span
+                              class="mdi mdi-email novi-icon"></span></span></span>
+                        <input class="form-control" placeholder="Insira seu email" type="email" name="email"
+                          data-constraints="@Required @Email"><span class="input-group-append">
+                          <button class="btn btn-sm btn-danger" type="submit">Inscreva-se</button></span> <!-- Em breve -->
+                      </div>
+                    </div>
+                    <div class="form-output" id="form-subscribe-footer"></div>
+                  </form>
+                </div>
+              </div>
             </div>
-            <p class="text-darker offset-top-20">Intense Gym &copy; <span id="copyright-year"></span> .
-              Design&nbsp;by&nbsp;<a href="https://www.templatemonster.com">TemplateMonster</a>
-            </p>
+            <div class="col-sm-10 col-md-3 offset-top-66 order-md-1 offset-md-top-0 col-md-6 col-xl-3 order-xl-1">
+              <!-- Footer brand-->
+              <p class="text-uppercase text-spacing-60 font-weight-bold text-center text-xl-left">Nos acompanhe em
+                nossas redes sociais</p>
+
+              <div class="offset-top-50 text-sm-center text-xl-left">
+                <ul class="list-inline">
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon fa fa-google-plus icon-xxs icon-circle icon-darkest-filled" href="#"></a>
+                  </li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon fa fa-linkedin icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                </ul>
+              </div>
+              <p class="text-darker offset-top-20">Muscle Factory &copy; <span id="copyright-year"></span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
     </div>
   </footer>
   </div>
