--- a/equipe-muscle.html
+++ b/equipe-muscle.html
@@ -131,6 +131,36 @@
             </div>
           </div>
         </div>
+        <div class="col-sm-10 col-md-5">
+          <!-- Member block type 5-->
+          <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
+              src="images/user-emily-perkins-437x437.jpg" width="437" height="437" alt="" />
+            <div class="member-block-body"><a class="btn btn-block btn-danger" href="#contacts.html">Saiba Mais</a>
+              <div class="offset-top-34">
+                <ul class="list-inline list-inline-xs">
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-facebook" href="#"></a></li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-twitter" href="#"></a></li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-google-plus" href="#"></a></li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-linkedin" href="#"></a></li>
+                </ul>
+              </div>
+              <address class="contact-info offset-top-20 offset-md-top-34">
+                <ul class="list-unstyled p">
+                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-phone"></span><a
+                      class="p big text-middle d-inline-block offset-top-0" href="tel:041 xxxxx-xxxx">041 xxxxx-xxxx</a>
+                  </li>
+                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-email-open"></span><a
+                      class="p big text-middle d-inline-block offset-top-0 text-picton-blue"
+                      href="mailto:email@gmail.com">email@gmail.com</a></li>
+                </ul>
+              </address>
+            </div>
+          </div>
+        </div>
         <div class="col-sm-10 col-md-7 text-md-left">
           <div>
             <h1 class="text-darker">Equipe Muscle</h1>
